增加注册页面的HTML和样式

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,30 +1,36 @@
 <div class="container-fuild">
     <div class="tmall">
-        <img src="assets/image/common/simpleLogo.png" alt="">
+        <img src="assets/image/common/simpleLogo.png">
     </div>
-    <div class="loginimg">
-        <img src="assets/image/common/logni.jpg" width="100%" alt="">
+    
+    <div>
+        <img src="assets/image/common/logni.jpg" width="100%">
     </div>
+
     <div class="log">
         <span class="zhdl">账户登录</span>
         <div class="input-group">
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-user"></span>
             </span>
-                <input #name type="text">
+            <input class="form-control"  #name type="text">
         </div>
         <div class="input-group">
             <span class="input-group-addon">
                 <span class="glyphicon glyphicon-lock"></span>
             </span>
-            <input #password type="password">
+            <input class="form-control" type="password" #password>
         </div>
         <div>
             <span class="gay"><a>忘记密码</a></span>
-            <span class="gay pull-right"><a>免费注册</a></span>
+            <span class="gay pull-right">
+                <a routerLink="/registered">免费注册</a>
+            </span>
         </div>
         <div class="loginbtn">
-            <button (click)="login(name.value, password.value)" class="btn btn-block">登录</button>
+            <button
+            (click)="login(name.value, password.value)" 
+            class="btn btn-block">登录</button>
         </div>
     </div>
 </div>
