--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -1,4 +1,7 @@
 $m_c:#c40000; //main_color主色调(天猫红)
+
 $f_f:Arial;  //font-family字体家族
+
 $s_f_s:12px; //small_font_size 小号字体
 $n_f_s:14px; //normal_font_size 中号字体
+$b_f_s:16px; //big_font_size 大号字体
