--- a/src/app/common/components/head/head.component.html
+++ b/src/app/common/components/head/head.component.html
@@ -5,7 +5,7 @@
     </a>
     <span>喵，欢迎来天猫</span>
     <a href="登录页面.html">请登录</a>
-    <a href="注册页面.html">免费注册</a>
+    <a routerLink="/registered">免费注册</a>
 
     <span class="pull-right">
         <a href="我的订单.html">我的订单</a>
