--- a/src/app/registered/registered.component.scss
+++ b/src/app/registered/registered.component.scss
@@ -20,6 +20,14 @@ form {
     font-weight: bold;
   }
 
+  .ng-valid[required], .ng-valid.required {
+    border-left: 5px solid #42a498;
+  }
+
+  .ng-invalid:not(form) {
+    border-left: 5px solid #a94442;
+  }
+
   .text-danger {
 
     .warn-symbol {
