--- a/src/app/common/components/head/head.component.html
+++ b/src/app/common/components/head/head.component.html
@@ -1,11 +1,13 @@
 <nav class="top">
-    <a href="首页.html">
+    <a href="/index">
         <span class="glyphicon glyphicon glyphicon-home redColor"></span>
         天猫首页
     </a>
     <span>喵，欢迎来天猫</span>
-    <a href="登录页面.html">请登录</a>
-    <a routerLink="/registered">免费注册</a>
+    <ng-template *ngIf="isLogin">
+        <a href="/login">请登录</a>
+        <a routerLink="/registered">免费注册</a>
+    </ng-template>
 
     <span class="pull-right">
         <a href="我的订单.html">我的订单</a>
