--- a/src/app/common/components/head/head.component.html
+++ b/src/app/common/components/head/head.component.html
@@ -1,17 +1,17 @@
 <nav class="top">
-    <a href="/index">
+    <a routerLink="/index">
         <span class="glyphicon glyphicon glyphicon-home redColor"></span>
         天猫首页
     </a>
     <span>喵，欢迎来天猫</span>
     <ng-template *ngIf="isLogin">
-        <a href="/login">请登录</a>
+        <a routerLink="/login">请登录</a>
         <a routerLink="/registered">免费注册</a>
     </ng-template>
 
     <span class="pull-right">
-        <a href="我的订单.html">我的订单</a>
-        <a href="购物车页面.html">
+        <a>我的订单</a>
+        <a>
             购物车
             <span class=" glyphicon glyphicon-shopping-cart redColor" ></span>
             <strong>0</strong>
