--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -52,10 +52,10 @@
       <li data-slide-to="3" class="" data-target="#solidDown"></li>
     </ol>
     <div class="carousel-inner">
-      <div class="item active"><img src="../../assets/image/首页产品/car1.jpg" alt="car1" class="carousel carouselImage"></div>
-      <div class="item"><img src="../../assets/image/首页产品/car2.jpg" alt="car2" class="carouselImage"></div>
-      <div class="item"><img src="../../assets/image/首页产品/car3.jpg" alt="car3" class="carouselImage"></div>
-      <div class="item"><img src="../../assets/image/首页产品/car4.jpg" alt="car4" class="carouselImage"></div>
+      <div class="item active"><img src="assets/image/index/car1.jpg" alt="car1" class="carousel carouselImage"></div>
+      <div class="item"><img src="assets/image/index/car2.jpg" alt="car2" class="carouselImage"></div>
+      <div class="item"><img src="assets/image/index/car3.jpg" alt="car3" class="carouselImage"></div>
+      <div class="item"><img src="assets/image/index/car4.jpg" alt="car4" class="carouselImage"></div>
     </div>
   </div>
   <div class="carouselBackgroundDiv"></div>
