1. 升级到Angular7 2. 划分会员和商品模块

--- a/src/app/good/good-detail/good-detail.component.scss
+++ b/src/app/good/good-detail/good-detail.component.scss
@@ -238,7 +238,7 @@ span.juhuasuanTime {
 }
 
 div.productPriceDiv {
-  background-image: url(../../assets/image/common/priceBackground.png);
+  background-image: url(../../../assets/image/common/priceBackground.png);
   height: 102px;
   padding: 10px;
   color: #666666;
