--- a/src/app/shared/foot/foot.component.scss
+++ b/src/app/shared/foot/foot.component.scss
@@ -1,6 +1,6 @@
 @import 'src/assets/scss/base';
 
-div.footer{
+.footer{
     margin:0px 0px;
     border-top-style: solid;
     border-top-width: 1px;
