--- a/src/app/shared/head/head.component.scss
+++ b/src/app/shared/head/head.component.scss
@@ -1,19 +1,23 @@
 @import 'src/assets/scss/base';
 
-nav.top{
+.top{
   background-color:#f2f2f2;
   padding:5px 0px 5px 0px;
   border-bottom:1px solid #e7e7e7;
+
   font{
     size:$s_f_s;
     family:$f_f;
   }
+
   span{
     margin:0 10px 0 10px;
     color:#999;
   }
+
   a{
     @extend span;
+    cursor: pointer;
     &:hover{
       color:$m_c;
     }
