--- a/src/app/good/index/index.component.html
+++ b/src/app/good/index/index.component.html
@@ -44,21 +44,8 @@
   </div>
 
   <!--轮播图-->
-  <div class="carousel slide" id="solidDown" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-slide-to="0" calss="active" data-target="#solidDown"></li>
-      <li data-slide-to="1" class="" data-target="#solidDown"></li>
-      <li data-slide-to="2" class="" data-target="#solidDown"></li>
-      <li data-slide-to="3" class="" data-target="#solidDown"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="item active"><img src="assets/image/index/car1.jpg" alt="car1" class="carousel carouselImage"></div>
-      <div class="item"><img src="assets/image/index/car2.jpg" alt="car2" class="carouselImage"></div>
-      <div class="item"><img src="assets/image/index/car3.jpg" alt="car3" class="carouselImage"></div>
-      <div class="item"><img src="assets/image/index/car4.jpg" alt="car4" class="carouselImage"></div>
-    </div>
-  </div>
-  <div class="carouselBackgroundDiv"></div>
+  <app-carousel></app-carousel>
+
 </div>
 
 <app-good-row *ngFor="let cate of all_cate_good" [cate]="cate"></app-good-row>
