--- a/src/app/good/index/carousel/carousel.component.html
+++ b/src/app/good/index/carousel/carousel.component.html
@@ -1,5 +1,8 @@
-<div class="carousel slide" id="solidDown" data-ride="carousel">
+<app-carousel-head-bar></app-carousel-head-bar>
 
+<app-carousel-side-cate></app-carousel-side-cate>
+
+<div class="carousel slide" id="solidDown" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-slide-to="0" calss="active" data-target="#solidDown"></li>
     <li data-slide-to="1" data-target="#solidDown"></li>
@@ -11,7 +14,6 @@
     <div 
       *ngFor="let src of imgArr;let i = index" 
       [ngClass]="['item', i===0 ? 'active' : '']">
-
       <img 
         src="{{ src }}" alt="{{ 'carousel-img' + i}}"
         class="carousel__image">
